Added documentation and expanded foldey layout

--- a/Trabalho_Final.csproj
+++ b/Trabalho_Final.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BusinessLogic\" />
+    <Folder Include="Messages\" />
+  </ItemGroup>
+
 </Project>
